tests/reference/asr-test_const_list_append-ada1ade.stderr
semantic error: cannot append element to a const list
 --> tests/errors/test_const_list_append.py:7:5
  |
7 |     CONST_INTEGER_LIST.append(6)
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
